--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 
 body {
   background-image: url('../img/fundo.jpg');
-  background-size: auto 100vw;
+  background-size: auto 100vh;
   font-family: arial; 
   font-size: 10px; 
 }
