--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,12 @@ html{
 }
 
 body {
-  background-image: url('../img/fundo.jpg');
+  /*background-image: url('../img/fundo.jpg');*/
+  background-color: rgba(64,103,118,1);
   background-size: auto 95vh;
   font-family: 'Roboto', sans-serif;
   font-size: 16px; 
+  min-height: 100vh;
 }
 
 @media (min-width:400px) {
@@ -54,7 +56,7 @@ header{
   display: block;
   padding: 0.3em;
   text-decoration: none;
-  
+  transition: color 1s;
 }
 
 a{
@@ -62,8 +64,12 @@ a{
   text-decoration: none;
 }
 
-a:hover{
-  
+.menu a:hover{
+  background-color: teal;
+  color: whitesmoke;
+}
+
+a:hover{  
   font-size: 18px;
 }
 
@@ -119,8 +125,10 @@ a:hover{
 }
 
 .sobre{
+  background-size: auto 95vh;
   padding: 2em;
-  
+  min-height: 100vh;
+  gap: 1em;
 }
 
 .sobre h1{
@@ -132,21 +140,44 @@ a:hover{
 
 .sobre .grid{
   display: grid;
-  gap: 1em;
+  gap: 0.5em;
   justify-content: center;  
   align-content: center;
-  grid-template-columns: 450px 450px;
+  grid-template-columns: 150px;
   margin-top: 2em;  
+}
+
+@media(min-width: 300px){
+  .sobre .grid{
+    grid-template-columns: repeat(2, 150px);
+    justify-content: center;
+  }
+}
+
+@media(min-width: 500px){
+  .sobre .grid{
+    grid-template-columns: repeat(2, 350px);
+    justify-content: center;
+  }
 }
 
 .img-sobre{
   border-radius: 10px;
-  height: 450px;
+  height: 250px;
   object-fit: cover;
-  width: 450px;
+  width: 150px;
   margin-bottom: 1em;   
 }
 
+@media(min-width: 500px){
+  .img-sobre{
+    border-radius: 10px;
+    height: 450px;
+    object-fit: cover;
+    width: 350px;
+    margin-bottom: 1em;   
+  }
+}
 .sobre h2{
   color: white;  
   font-size: 1em;
@@ -154,7 +185,9 @@ a:hover{
 }
 
 .portfolio {
+  background-size: auto 95vh;
   padding: 3em;
+  min-height: 100vh;
 }
 
 
@@ -205,35 +238,31 @@ a:hover{
 }
 
 .contato{
+  background-size: auto 95vh;
+  text-align: center;
+  min-height: 100vh;
   padding: 3em;
+  
 }
 
 .contato h2{
+  margin-bottom: 4em;
   font-weight: bold;
   text-align: center;
   font-size: 2em;
-  color: white; 
-  margin-bottom: 5em;   
+  color: white;  
 }
 
-.contato figure{
-  text-align: center;
+.contato a{
+  margin: 0.5em;
+  color: whitesmoke;
+  font-size: 10em;
+  transition: text-shadow 1s
 }
 
-.contato .grid{
-  grid-template-columns: repeat(3, 300px);
-  display: grid;
-  gap: 5em;
-  padding: 4em;
-  justify-content: center;  
-  align-content: center;
-}
-
-.img-contato{
-  text-align: center;
-  height: 180px;
-  object-fit: cover;
-  width: 180px; 
-  justify-content: center;  
-  align-content: center; 
+.contato a:active,
+.contato a:hover{
+  text-decoration: none;
+  
+  text-shadow: 0px 0px 10px rgba(255,255,255,.5);
 }
